--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro: #FF862A;
+    --laranja-claro:  #FF862A;
+    --alto-contraste-fundo:  #000000;
+    --alto-contraste-texto:  #ffffff;
+    --alto-contraste-link:  #ffd700;
 }
+
 
 body {
     font-size: 1rem;
@@ -12,32 +16,6 @@ body {
 
 header {
     background-color: #ffffff;
-}
-
-.menu-acessibilidade {
-    position: fixed;
-    top: 2rem;
-    right: 25px;
-    z-index: 1000;
-}
-
-.rotacao-botao {
-    transform: rotate(-90deg);
-    transform-origin: right center;
-}
-
-.opcoes-acessibilidade {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-}
-
-.opcoes-acessibilidade button {
-    margin-bottom: 5px;
-}
-
-.apresenta-lista {
-    display: none;
 }
 
 
@@ -67,9 +45,9 @@ section {
 /* posicionamento para a imagem à direita */
 .img-inicio {
     position: absolute;
-    right: 7rem;
-    top: 20rem;
-    width: 38rem;
+    right: 0;
+    top: 18rem;
+    width: 45rem;
     height: auto;
 }
 
@@ -165,4 +143,51 @@ h2 {
 /* chama classe do bootstrap para modificar a cor */
 .form-control {
     background-color: #F1EDEF;
+}
+
+.menu-acessibilidade{
+    position: fixed;
+    top:2rem;
+    right:20px;
+    z-index: 1000;
+}
+.rotacao-botao{
+    transform: rotate(-90deg);
+    transform-origin: right center;
+}      
+.opcoes-acessibilidade{
+    margin-top:10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.opcoes-acessibilidade button{
+    margin-bottom: 5px;
+}
+.apresenta-lista{
+    display: none;
+}
+.alto-contraste{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+.alto-contraste header, .alto-contraste footer, .alto-contraste .formulario{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+.alto-contraste .nav-link{
+    color: var(--alto-contraste-link);
+}
+.alto-contraste .botao-inicio, .alto-contraste .formulario button, .alto-contraste .btn-primary{
+    background-color: var(--alto-contraste-link);
+    color: var(--alto-contraste-fundo)
+}
+.alto-contraste #tropicalia {
+    background: none;
+}
+.alto-contraste #galeria {
+    background-color: var(--alto-contraste-fundo);
+}
+.alto-contraste .fundo-galeria {
+    background: none;
 }
